k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hybrid-devops-service
  namespace: dev-ns

spec:
  selector:
    app: hybrid-devops-app

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

  type: ClusterIP
